Se cambio algunas Descripciones

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta Tags -->
-    <title>NeoTech AI</title>
+    <title>NeoTech IA</title>
     <meta name="description" content="Landig pague de AI" />
     <meta name="keywords" content="desarrollador frontend, React, JavaScript, portafolio web, IA, automatización, Botpress, chatbots, desarrollo web, UI/UX" />
     <meta name="author" content="Tu Nombre" />
     <meta name="robots" content="index, follow" />
-    
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
